# employee_management

./: app.db  pyproject.toml
app/: README.md  main.py
app/auth/: dependencies.py  router.py
app/core/: database.py  security.py
app/employees/: model.py  repository.py  router.py  schema.py  service.py
templates/: base.html  create_employee.html  edit_employee.html  employees.html
